--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@experimentlab/shared": "*",
+    "@prisma/client": "^5.7.0",
     "@tanstack/react-query": "^5.17.0",
     "axios": "^1.6.5",
+    "bcryptjs": "^2.4.3",
     "clsx": "^2.1.0",
     "date-fns": "^3.2.0",
+    "dotenv": "^16.6.1",
     "next": "14.1.0",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
@@ -25,6 +28,7 @@
     "zustand": "^4.4.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
